--- a/render.yaml
+++ b/render.yaml
@@ -14,6 +14,6 @@ services:
         value: 0.0.0.0
       - key: FLASK_RUN_PORT
         value: 8000
-    dockerfilePath: Dockerfile
     buildCommand: pip install -r requirements.txt
     startCommand: gunicorn app:app --bind 0.0.0.0:8000 --workers 4
+    env: python 3.9
