--- a/render.yaml
+++ b/render.yaml
@@ -16,4 +16,4 @@ services:
         value: 8000
     buildCommand: pip install -r requirements.txt
     startCommand: gunicorn app:app --bind 0.0.0.0:8000 --workers 4
-    runtime: python
+    plan: free
